--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -1,7 +1,4 @@
-/* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
-  padding-bottom: 20px;
 }
 
 table {
@@ -20,13 +17,27 @@ table.area_hand {
     margin: 0 auto 0 auto;
 }
 
-td td img{
-    padding: 0;
-    margin: 0;
+td {
+    position: relative;
+}
+
+td img{
 }
 
 img.bgcard {
     -ms-transform: rotate(90deg);       /* IE 9 */
     -webkit-transform: rotate(90deg);   /* Safari */
     transform: rotate(90deg);
+    height: 100px;
+    width: 90px;
+}
+
+img.token {
+    position: absolute;
+    z-index: 1000;
+    top: 25%;
+    left: 20%;
+    height: 50px;
+    width: 50px;
+    visibility: hidden;
 }
